syntax = "proto3";

package order;

message OrdersRequest {
    int32 offset = 1;
    int32 limit = 2;
}

message OrdersResponse {
    string data = 1;
}